fix: fixed background images

--- a/index.html
+++ b/index.html
@@ -61,80 +61,82 @@
     <main>
       <div class="container">
         <!-- Сделать тег section -->
-        <section class="preview-block">
-          <div class="preview">
-            <p class="preview__street">ул. Черкизова 14, Москва</p>
-            <h1>Surf Train Co</h1>
-            <p class="preview__slogan">
-              ПОКОРЯЙТЕ&nbsp;ВОЛНЫ ВМЕСТЕ&nbsp;С&nbsp;НАМИ
-            </p>
-            <p class="preview__desc">
-              SurfTrainCo предлагает вам доступное, комплексное и приятное
-              обучение серфингу для&nbsp;всех уровней навыков и возрастов
-            </p>
-          </div>
-        </section>
-        <section class="description-block">
-          <div class="description">
-            <div class="description__item">
-              <img
-                src="public/description-1.png"
-                alt="description-image"
-                class="description__item__image"
-              />
-              <p class="description__item__head-text head-text">
-                Профессиональное руководство
+        <div class="background-image">
+          <section class="preview-block">
+            <div class="preview">
+              <p class="preview__street">ул. Черкизова 14, Москва</p>
+              <h1>Surf Train Co</h1>
+              <p class="preview__slogan">
+                ПОКОРЯЙТЕ&nbsp;ВОЛНЫ ВМЕСТЕ&nbsp;С&nbsp;НАМИ
               </p>
-              <p class="description__item__main-text main-text">
-                опытные инструкторы помогут вам освоить основы и быстро
-                совершенствоваться.
+              <p class="preview__desc">
+                SurfTrainCo предлагает вам доступное, комплексное и приятное
+                обучение серфингу для&nbsp;всех уровней навыков и возрастов
               </p>
             </div>
-            <div class="description__item">
-              <img
-                src="public/description-2.png"
-                alt="description-image"
-                class="description__item__image"
-              />
-              <p class="description__item__head-text head-text">
-                Качественное оборудование
-              </p>
-              <p class="description__item__main-text main-text">
-                доски и гидрокостюмы помогут вам оставаться в безопасности и
-                получать удовольствие.
-              </p>
-            </div>
-            <div class="description__item">
-              <img
-                src="public/description-3.png"
-                alt="description-image"
-                class="description__item__image"
-              />
+          </section>
+          <section class="description-block">
+            <div class="description">
+              <div class="description__item">
+                <img
+                  src="public/description-1.png"
+                  alt="description-image"
+                  class="description__item__image"
+                />
+                <p class="description__item__head-text">
+                  Профессиональное руководство
+                </p>
+                <p class="description__item__main-text main-text">
+                  опытные инструкторы помогут вам освоить основы и быстро
+                  совершенствоваться.
+                </p>
+              </div>
+              <div class="description__item">
+                <img
+                  src="public/description-2.png"
+                  alt="description-image"
+                  class="description__item__image"
+                />
+                <p class="description__item__head-text">
+                  Качественное оборудование
+                </p>
+                <p class="description__item__main-text main-text">
+                  доски и гидрокостюмы помогут вам оставаться в безопасности и
+                  получать удовольствие.
+                </p>
+              </div>
+              <div class="description__item">
+                <img
+                  src="public/description-3.png"
+                  alt="description-image"
+                  class="description__item__image"
+                />
 
-              <p class="description__item__head-text head-text">
-                Благоприятная обстановка
-              </p>
-              <p class="description__item__main-text main-text">
-                благоприятная и безопасная обстановка в обучении с людьми со
-                схожим опытом и целями.
-              </p>
+                <p class="description__item__head-text">
+                  Благоприятная обстановка
+                </p>
+                <p class="description__item__main-text main-text">
+                  благоприятная и безопасная обстановка в обучении с людьми со
+                  схожим опытом и целями.
+                </p>
+              </div>
+              <div class="description__item">
+                <img
+                  src="public/description-4.png"
+                  alt="description-image"
+                  class="description__item__image"
+                />
+                <p class="description__item__head-text">
+                  Дополнительные услуги
+                </p>
+                <p class="description__item__main-text main-text">
+                  услуги фотографий и видео помогут вам запечатлить и поделиться
+                  опытом серфинга.
+                </p>
+              </div>
             </div>
-            <div class="description__item">
-              <img
-                src="public/description-4.png"
-                alt="description-image"
-                class="description__item__image"
-              />
-              <p class="description__item__head-text head-text">
-                Дополнительные услуги
-              </p>
-              <p class="description__item__main-text main-text">
-                услуги фотографий и видео помогут вам запечатлить и поделиться
-                опытом серфинга.
-              </p>
-            </div>
-          </div>
-        </section>
+          </section>
+        </div>
         <section class="company-block">
           <!-- <img
             src="public/Подложка вырез (1).png"
@@ -194,16 +196,15 @@
               </ul>
             </ul>
           </div>
-          <div class="comment">
-            <p class="comment__text text">
-              Не бойтесь испытать себя и свои возможности - поддайтесь волнам и
-              пусть они помогут вам раскрыть свой истинный потенциал.
-              Погрузитесь в мир серфинга и почувствуйте, как ваша жизнь
-              наполняется яркими эмоциями и волнующими приключениями. Погнали
-              волну!
-            </p>
-          </div>
         </section>
+        <div class="comment">
+          <p class="comment__text text">
+            Не бойтесь испытать себя и свои возможности - поддайтесь волнам и
+            пусть они помогут вам раскрыть свой истинный потенциал. Погрузитесь
+            в мир серфинга и почувствуйте, как ваша жизнь наполняется яркими
+            эмоциями и волнующими приключениями. Погнали волну!
+          </p>
+        </div>
         <section class="rewards-block">
           <div class="rewards">
             <!-- <img
@@ -459,15 +460,15 @@
               </div>
             </div>
           </div>
-          <div class="comment">
-            <p class="comment__text">
-              Помните, что каждый ваш выход на доску - это возможность выйти за
-              пределы своих комфортных зон и стать лучше, сильнее и увереннее.
-              Поверьте в себя, стремитесь к новым вершинам и не забывайте
-              наслаждаться каждым мгновением на доске.
-            </p>
-          </div>
         </section>
+        <div class="comment">
+          <p class="comment__text">
+            Помните, что каждый ваш выход на доску - это возможность выйти за
+            пределы своих комфортных зон и стать лучше, сильнее и увереннее.
+            Поверьте в себя, стремитесь к новым вершинам и не забывайте
+            наслаждаться каждым мгновением на доске.
+          </p>
+        </div>
         <section class="order-block">
           <div class="order">
             <!-- <img
