--- a/index.html
+++ b/index.html
@@ -269,14 +269,22 @@
                   </div>
                   <div class="easy-start__info info">
                     <div class="easy-start__info__course course">
-                      <img src="public/icon1.svg" alt="Календарь" />
+                      <img
+                        src="public/icon1.svg"
+                        alt="Календарь"
+                        class="easy-start__info__course__image"
+                      />
                       <div class="easy-start__info__course__text text">
                         <p>длительность курса</p>
                         <p>5 уроков</p>
                       </div>
                     </div>
                     <div class="easy-start__info__lesson lesson">
-                      <img src="public/icon2.svg" alt="Секундомер" />
+                      <img
+                        src="public/icon2.svg"
+                        alt="Секундомер"
+                        class="easy-start__info__lesson__image"
+                      />
                       <div class="easy-start__info__lesson__text text">
                         <p>длительность урока</p>
                         <p>45 минут</p>
@@ -285,22 +293,38 @@
                   </div>
                   <div class="easy-start__description">
                     <div class="easy-start__description__mark">
-                      <img src="public/Иконка-галочка.svg" alt="Галочка" />
+                      <img
+                        src="public/Иконка-галочка.svg"
+                        alt="Галочка"
+                        class="mark"
+                      />
                       <p>Воссозданный искуственный речной порог</p>
                     </div>
                     <div class="easy-start__description__mark">
-                      <img src="public/Иконка-галочка.svg" alt="Галочка" />
+                      <img
+                        src="public/Иконка-галочка.svg"
+                        alt="Галочка"
+                        class="mark"
+                      />
                       <p>Доска с плавниками, как на океане</p>
                     </div>
                     <div class="easy-start__description__mark">
-                      <img src="public/Иконка-галочка.svg" alt="Галочка" />
+                      <img
+                        src="public/Иконка-галочка.svg"
+                        alt="Галочка"
+                        class="mark"
+                      />
                       <p>
                         Даёт&nbsp;возможность&nbsp;отработать&nbsp;технику&nbsp;поворотов,
                         трюки&nbsp;на&nbsp;волне,&nbsp;развить&nbsp;баланс&nbsp;и&nbsp;мышечную&nbsp;память
                       </p>
                     </div>
                     <div class="easy-start__description__mark">
-                      <img src="public/Иконка-галочка.svg" alt="Галочка" />
+                      <img
+                        src="public/Иконка-галочка.svg"
+                        alt="Галочка"
+                        class="mark"
+                      />
                       <p>
                         Помогает&nbsp;подготовиться&nbsp;к&nbsp;катанию&nbsp;на&nbsp;океанских
                         волнах&nbsp;(работа&nbsp;тела&nbsp;после&nbsp;оп-ап)
@@ -329,14 +353,22 @@
                   </div>
                   <div class="flow-rider__info">
                     <div class="flow-rider__info__course course">
-                      <img src="public/icon1.svg" alt="Календарь" />
+                      <img
+                        src="public/icon1.svg"
+                        alt="Календарь"
+                        class="flow-rider__info__course__image"
+                      />
                       <div class="flow-rider__info__course__text text">
                         <p>длительность курса</p>
                         <p>5 уроков</p>
                       </div>
                     </div>
                     <div class="flow-rider__info__lesson lesson">
-                      <img src="public/icon2.svg" alt="Секундомер" />
+                      <img
+                        src="public/icon2.svg"
+                        alt="Секундомер"
+                        class="flow-rider__info__lesson__image"
+                      />
                       <div class="flow-rider__info__lesson__text text">
                         <p>длительность урока</p>
                         <p>45 минут</p>
@@ -345,28 +377,44 @@
                   </div>
                   <div class="flow-rider__description">
                     <div class="flow-rider__description__mark">
-                      <img src="public/Иконка-галочка.svg" alt="Галочка" />
+                      <img
+                        src="public/Иконка-галочка.svg"
+                        alt="Галочка"
+                        class="mark"
+                      />
                       <p>
                         Напор&nbsp;воды,&nbsp;направленный&nbsp;вверх&nbsp;по&nbsp;натянутой
                         тканевой&nbsp;поверхности
                       </p>
                     </div>
                     <div class="flow-rider__description__mark">
-                      <img src="public/Иконка-галочка.svg" alt="Галочка" />
+                      <img
+                        src="public/Иконка-галочка.svg"
+                        alt="Галочка"
+                        class="mark"
+                      />
                       <p>
                         Доска&nbsp;без&nbsp;плавников,&nbsp;нечто&nbsp;среднее&nbsp;между
                         скейтбордом&nbsp;и&nbsp;сноубордом
                       </p>
                     </div>
                     <div class="flow-rider__description__mark">
-                      <img src="public/Иконка-галочка.svg" alt="Галочка" />
+                      <img
+                        src="public/Иконка-галочка.svg"
+                        alt="Галочка"
+                        class="mark"
+                      />
                       <p>
                         Даёт&nbsp;возможность&nbsp;развить&nbsp;баланс&nbsp;и&nbsp;получить&nbsp;яркие
                         эмоции&nbsp;от&nbsp;катания&nbsp;на&nbsp;волне
                       </p>
                     </div>
                     <div class="flow-rider__description__mark">
-                      <img src="public/Иконка-галочка.svg" alt="Галочка" />
+                      <img
+                        src="public/Иконка-галочка.svg"
+                        alt="Галочка"
+                        class="mark"
+                      />
                       <p>
                         Возможность&nbsp;поймать&nbsp;удовольствие&nbsp;от&nbsp;движения&nbsp;и
                         маневрирования&nbsp;на&nbsp;доске&nbsp;по&nbsp;водному&nbsp;потоку
@@ -560,18 +608,19 @@
                 alt=""
                 class="location__address__online-image online-image"
               />
-              <div class="location__address__tag tag">
-                <img
-                  src="public/Location.png"
-                  alt=""
-                  class="location__address__tag__image image"
-                />
-                <p class="street">ул.&nbsp;Черкизова&nbsp;14, Москва</p>
-              </div>
-
-              <div class="location__address__bus">
-                <p>Как&nbsp;добраться?</p>
-                <p>Маршруты:&nbsp;139,&nbsp;28б</p>
+              <div class="location__address__route">
+                <div class="location__address__route__tag tag">
+                  <img
+                    src="public/Location.png"
+                    alt=""
+                    class="location__address__tag__image image"
+                  />
+                  <p class="street">ул.&nbsp;Черкизова&nbsp;14, Москва</p>
+                </div>
+                <div class="location__address__route__bus">
+                  <p>Как&nbsp;добраться?</p>
+                  <p>Маршруты:&nbsp;139,&nbsp;28б</p>
+                </div>
               </div>
             </div>
           </div>
@@ -610,7 +659,7 @@
             <p>Контакты</p>
           </div>
         </div>
-        <div class="footer__common_copyright copyright">
+        <div class="footer__common__copyright copyright">
           <p>(с) SurfTrainCo, 2023</p>
           <p>Политика конфеденциальности</p>
           <p>Публичная оферта</p>
