feat: adaptive (320px - 430px)

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <div class="preview">
               <p class="preview__street">ул. Черкизова 14, Москва</p>
               <h1>Surf Train Co</h1>
+              <p class="mobile-slogan">ПОКОРЯЙТЕ ВОЛНЫ С НАМИ</p>
               <p class="preview__slogan">
                 ПОКОРЯЙТЕ&nbsp;ВОЛНЫ ВМЕСТЕ&nbsp;С&nbsp;НАМИ
               </p>
@@ -315,8 +316,8 @@
                         class="mark"
                       />
                       <p>
-                        Даёт&nbsp;возможность&nbsp;отработать&nbsp;технику&nbsp;поворотов,
-                        трюки&nbsp;на&nbsp;волне,&nbsp;развить&nbsp;баланс&nbsp;и&nbsp;мышечную&nbsp;память
+                        Даёт возможность отработать технику поворотов, трюки на
+                        волне, развить баланс и мышечную память
                       </p>
                     </div>
                     <div class="easy-start__description__mark">
@@ -326,8 +327,8 @@
                         class="mark"
                       />
                       <p>
-                        Помогает&nbsp;подготовиться&nbsp;к&nbsp;катанию&nbsp;на&nbsp;океанских
-                        волнах&nbsp;(работа&nbsp;тела&nbsp;после&nbsp;оп-ап)
+                        Помогает подготовиться к катанию на океанских волнах
+                        (работа тела после оп-ап)
                       </p>
                     </div>
                   </div>
@@ -383,8 +384,8 @@
                         class="mark"
                       />
                       <p>
-                        Напор&nbsp;воды,&nbsp;направленный&nbsp;вверх&nbsp;по&nbsp;натянутой
-                        тканевой&nbsp;поверхности
+                        Напор воды, направленный вверх по натянутой тканевой
+                        поверхности
                       </p>
                     </div>
                     <div class="flow-rider__description__mark">
@@ -394,8 +395,8 @@
                         class="mark"
                       />
                       <p>
-                        Доска&nbsp;без&nbsp;плавников,&nbsp;нечто&nbsp;среднее&nbsp;между
-                        скейтбордом&nbsp;и&nbsp;сноубордом
+                        Доска без плавников, нечто среднее между скейтбордом и
+                        сноубордом
                       </p>
                     </div>
                     <div class="flow-rider__description__mark">
@@ -405,8 +406,8 @@
                         class="mark"
                       />
                       <p>
-                        Даёт&nbsp;возможность&nbsp;развить&nbsp;баланс&nbsp;и&nbsp;получить&nbsp;яркие
-                        эмоции&nbsp;от&nbsp;катания&nbsp;на&nbsp;волне
+                        Даёт возможность развить баланс и получить яркие эмоции
+                        от катания на волне
                       </p>
                     </div>
                     <div class="flow-rider__description__mark">
@@ -416,8 +417,8 @@
                         class="mark"
                       />
                       <p>
-                        Возможность&nbsp;поймать&nbsp;удовольствие&nbsp;от&nbsp;движения&nbsp;и
-                        маневрирования&nbsp;на&nbsp;доске&nbsp;по&nbsp;водному&nbsp;потоку
+                        Возможность поймать удовольствие от движения и
+                        маневрирования на доске по водному потоку
                       </p>
                     </div>
                   </div>
