--- a/index.html
+++ b/index.html
@@ -460,11 +460,13 @@
                   <div class="discounts__photos__card__text-down text-down">
                     <p>Бесплатный урок серфинга для первого посещения</p>
                   </div>
-                  <img
-                    src="public/goto.svg"
-                    alt="goto"
-                    class="discounts__photos__card__text-image"
-                  />
+                  <a href="#">
+                    <img
+                      src="public/goto.svg"
+                      alt="goto"
+                      class="discounts__photos__card__text-image"
+                    />
+                  </a>
                 </div>
               </div>
               <div class="discounts__photos__border">
@@ -480,11 +482,13 @@
                   <div class="discounts__photos__card__text-down text-down">
                     <p>Сертификация или аттестация по окончании курса</p>
                   </div>
-                  <img
-                    src="public/goto.svg"
-                    alt="goto"
-                    class="discounts__photos__card__text-image"
-                  />
+                  <a href="#">
+                    <img
+                      src="public/goto.svg"
+                      alt="goto"
+                      class="discounts__photos__card__text-image"
+                    />
+                  </a>
                 </div>
               </div>
               <div class="discounts__photos__border">
@@ -497,11 +501,13 @@
                   <div class="discounts__photos__card__text-up text-up">
                     <p>До 12.05.2024</p>
                   </div>
-                  <img
-                    src="public/goto.svg"
-                    alt="goto"
-                    class="discounts__photos__card__text-image"
-                  />
+                  <a href="#">
+                    <img
+                      src="public/goto.svg"
+                      alt="goto"
+                      class="discounts__photos__card__text-image"
+                    />
+                  </a>
                   <div class="discounts__photos__card__text-down text-down">
                     <p>Пакет серфинга для двоих</p>
                   </div>
@@ -632,11 +638,13 @@
       <div class="footer-block">
         <div class="footer__common">
           <div class="footer__common__way way">
-            <img
-              src="public/logo-1.svg"
-              alt=""
-              class="footer__common__way__logo logo"
-            />
+            <a href="#">
+              <img
+                src="public/logo-1.svg"
+                alt="logo"
+                class="footer__common__way__logo logo"
+              />
+            </a>
             <p>Свяжитесь&nbsp;с&nbsp;нами&nbsp;любым удобным&nbsp;способом</p>
             <div class="footer__common__way__contacts-image contacts-image">
               <img src="public/Телеграм.svg" alt="Telegram" class="telegram" />
@@ -653,17 +661,19 @@
           </div>
           <div class="footer__common__client client">
             <p>Для клиентов</p>
-            <p>О нас</p>
-            <p>Награды</p>
-            <p>Тарифы</p>
-            <p>Акции</p>
-            <p>Контакты</p>
+            <a href="#" title="О нас">О нас</a>
+            <a href="#" title="Наши награды">Награды</a>
+            <a href="#" title="Наши тарифы">Тарифы</a>
+            <a href="#" title="Наши акции">Акции</a>
+            <a href="#" title="Наши контакты">Контакты</a>
           </div>
         </div>
         <div class="footer__common__copyright copyright">
           <p>(с) SurfTrainCo, 2023</p>
-          <p>Политика конфеденциальности</p>
-          <p>Публичная оферта</p>
+          <a href="#" title="Политика конфеденциальности"
+            >Политика конфеденциальности</a
+          >
+          <a href="#" title="Публичная оферта">Публичная оферта</a>
         </div>
       </div>
     </footer>
