--- a/index.html
+++ b/index.html
@@ -47,9 +47,14 @@
             class="contacts-whatsapp"
           />
           <img src="public/viber.svg" alt="Viber" class="contacts-viber" />
-          <p aria-label="phone\ number" class="contacts-number">
+          <a
+            href="#"
+            title="Связаться с нами"
+            aria-label="phone\ number"
+            class="contacts-number"
+          >
             +7(910) 684-90-53
-          </p>
+          </a>
         </address>
         <!-- Сделать кнопку полностью кликалбельной -->
         <a href="#" class="header-container__details details">
@@ -539,28 +544,42 @@
             <form class="order__form form">
               <!-- Переделать как форму-->
               <div class="order__form__block block">
-                <select name="" id="" class="order__form__block__table table">
-                  <option value="">Выберите дату</option>
-                </select>
-                <select name="" id="" class="order__form__block__table table">
-                  <option value="">Выберите время</option>
-                </select>
+                <input
+                  type="date"
+                  class="order__form__block__table table"
+                  min="2025-03-17"
+                  max="2025-03-23"
+                  required
+                />
+                <input
+                  type="time"
+                  class="order__form__block__table table"
+                  value="13:37"
+                  required
+                />
                 <select
-                  name=""
-                  id=""
+                  name="tarif"
                   class="order__form__block__table__tarif order__form__block__table"
+                  required
                 >
                   <option value="">Выберите подходящий тариф</option>
+                  <option value="1">Easy Start</option>
+                  <option value="2">Flow Rider</option>
                 </select>
                 <input
                   type="text"
                   class="order__form__text text"
                   placeholder="Иванов Иван"
+                  required
                 />
                 <input
-                  type="text"
+                  type="tel"
                   class="order__form__text text"
                   placeholder="8(999) 999-99-99"
+                  minlength="11"
+                  pattern="[8]{1}[0-9]{3}[0-9]{3}[0-9]{2}[0-9]{2}"
+                  list="defaultTels"
+                  required
                 />
                 <button class="order__form__button">Записаться онлайн</button>
                 <p>
@@ -654,9 +673,14 @@
           </div>
           <div class="footer__common__contacts contacts">
             <p>Контакты</p>
-            <p>+7 (910) 684-90-53</p>
-            <p>SurfCocommerce@yandex.ru</p>
-            <p>г. Москва, ул. Черкизова 14</p>
+            <a href="#" title="Связаться с нами">+7 (910) 684-90-53</a>
+            <a href="mailto:SurfCocommerce@yandex.ru"
+              >SurfCocommerce@yandex.ru</a
+            >
+            <a
+              href="https://yandex.eu/maps/geo/moskva/53166393/?ll=37.686943%2C55.761544&z=12.48"
+              >г. Москва, ул. Черкизова 14</a
+            >
             <p>Работаем с 8:00-22:00</p>
           </div>
           <div class="footer__common__client client">
