feat: adaptive text

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <div class="rewards__text">
               <div class="rewards__text__head head">
                 <p class="head-text">НАГРАДЫ</p>
-                <p class="sup-text">нашего клуба</p>
+                <p class="sup-text">нашего&nbsp;клуба</p>
               </div>
               <div class="rewards__text__year year">
                 <button>2022</button>
@@ -538,7 +538,7 @@
           /> -->
             <div class="order__text">
               <p class="head-text">ЗАПИСЬ</p>
-              <p class="sup-text">на занятие</p>
+              <p class="sup-text">на&nbsp;занятие</p>
             </div>
             <!-- Не делить логические конструкции -->
             <form class="order__form form">
@@ -598,8 +598,8 @@
         <section class="location-block">
           <div class="location">
             <div class="location__text text">
-              <p class="head-text">МЫ НА КАРТЕ</p>
-              <p class="sup-text">где искать?</p>
+              <p class="head-text">МЫ&nbsp;НА&nbsp;КАРТЕ</p>
+              <p class="sup-text">где&nbsp;искать?</p>
               <!-- Не делить логические конструкции -->
             </div>
             <img src="public/МЕТКА.svg" alt="Метка" class="location__point" />
