feat: adaptive footer

--- a/index.html
+++ b/index.html
@@ -693,11 +693,11 @@
           </div>
         </div>
         <div class="footer__common__copyright copyright">
-          <p>(с) SurfTrainCo, 2023</p>
+          <p>(с)&nbsp;SurfTrainCo,&nbsp;2023</p>
           <a href="#" title="Политика конфеденциальности"
-            >Политика конфеденциальности</a
+            >Политика&nbsp;конфеденциальности</a
           >
-          <a href="#" title="Публичная оферта">Публичная оферта</a>
+          <a href="#" title="Публичная оферта">Публичная&nbsp;оферта</a>
         </div>
       </div>
     </footer>
