feat: apaptive order

--- a/index.html
+++ b/index.html
@@ -581,10 +581,12 @@
                   list="defaultTels"
                   required
                 />
-                <button class="order__form__button">Записаться онлайн</button>
+                <button class="order__form__button">
+                  Записаться&nbsp;онлайн
+                </button>
                 <p>
-                  Нажимая на кнопку, вы соглашаетесь
-                  <a href="#">с политикой обработки данных</a>
+                  Нажимая&nbsp;на&nbsp;кнопку,&nbsp;вы&nbsp;соглашаетесь
+                  <a href="#">с&nbsp;политикой&nbsp;обработки&nbsp;данных</a>
                 </p>
               </div>
               <img
