fix: preview description

--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
                 ПОКОРЯЙТЕ&nbsp;ВОЛНЫ ВМЕСТЕ&nbsp;С&nbsp;НАМИ
               </p>
               <p class="preview__desc">
-                SurfTrainCo предлагает вам доступное, комплексное и приятное
-                обучение серфингу для&nbsp;всех уровней навыков и возрастов
+                SurfTrainCo&nbsp;предлагает&nbsp;вам&nbsp;доступное,
+                комплексное&nbsp;и&nbsp;приятное&nbsp;обучение&nbsp;серфингу
+                для&nbsp;всех&nbsp;уровней&nbsp;навыков&nbsp;и&nbsp;возрастов
               </p>
             </div>
           </section>
