--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="preview">
               <p class="preview__street">ул. Черкизова 14, Москва</p>
               <h1>Surf Train Co</h1>
-              <p class="mobile-slogan">ПОКОРЯЙТЕ ВОЛНЫ С НАМИ</p>
+              <p class="mobile-slogan">ПОКОРЯЙТЕ ВОЛНЫ С&nbsp;НАМИ</p>
               <p class="preview__slogan">
                 ПОКОРЯЙТЕ&nbsp;ВОЛНЫ ВМЕСТЕ&nbsp;С&nbsp;НАМИ
               </p>
