--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       <section class="header-container">
         <a href="#"><img src="public/logo-1.svg" alt="logo" /></a>
         <nav class="header-container__menu menu">
+          <input id="burger-toggle" type="checkbox" />
+          <label for="burger-toggle">
+            <span></span>
+          </label>
           <ul class="menu-list">
             <li class="menu-item">
               <a class="menu-link" href="#">Главная</a>
